--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-  "name": "id-easy-yandex-s3",
+  "name": "moymyach",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "NODE_PATH=./build node build/app.js",
+    "build": "tsc -p .",
+    "lint": "eslint . --ext .ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.10",
+    "@types/node": "^20.8.6",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.51.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
+  },
   "dependencies": {
-    "cors": "^2.8.5",
-    "easy-yandex-s3": "^2.0.0",
+    "@a2seven/yoo-checkout": "^1.1.4",
+    "@aws-sdk/client-s3": "^3.454.0",
+    "@types/uuid": "^9.0.7",
+    "aws-sdk": "^2.1499.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "uuid": "^9.0.1",
+    "yup": "^1.3.2"
   }
 }
