--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.10",
     "@types/node": "^20.8.6",
@@ -26,6 +27,7 @@
     "@aws-sdk/client-s3": "^3.454.0",
     "@types/uuid": "^9.0.7",
     "aws-sdk": "^2.1499.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
