--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@a2seven/yoo-checkout": "^1.1.4",
     "@aws-sdk/client-s3": "^3.454.0",
     "@types/archiver": "^6.0.2",
+    "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.7",
     "archiver": "^6.0.1",
     "aws-sdk": "^2.1499.0",
@@ -33,6 +34,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "redis": "^4.6.11",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
   }
