--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "@a2seven/yoo-checkout": "^1.1.4",
     "@aws-sdk/client-s3": "^3.454.0",
+    "@aws-sdk/s3-request-presigner": "^3.478.0",
     "@types/archiver": "^6.0.2",
+    "@types/nodemailer": "^6.4.14",
     "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.7",
     "archiver": "^6.0.1",
@@ -34,6 +36,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "redis": "^4.6.11",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
